[workspace]
resolver = "2"

[package]
name = "minimal_repro_lightyear_rollbacks"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.14", default-features = true, features = ["serialize"] }
bevy-inspector-egui = "0.25"
serde = { version = "1", features = ["derive"] }
avian3d = { version = "0.1.1", features = ["serialize"] }
lightyear = { git = "https://github.com/cBournhonesque/lightyear", branch = "main", features = [
    "leafwing",
    "avian3d",
] }
leafwing-input-manager = "0.15"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable a lot of optimization in release mode
[profile.release]
codegen-units = 1
lto = "thin"

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
